# superdash

./: .env  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
apps/academy/: urls.py  views.py
apps/access/: urls.py  views.py
apps/authentication/: urls.py
apps/cards/: urls.py  views.py
apps/charts/: urls.py  views.py
apps/chat/: urls.py  views.py
apps/dashboards/: urls.py  views.py
apps/ecommerce/: urls.py  views.py
apps/extended_ui/: urls.py  views.py
apps/form_layouts/: urls.py  views.py
apps/form_validation/: urls.py  views.py
apps/form_wizard/: urls.py  views.py
apps/forms/: urls.py  views.py
apps/front_pages/: urls.py  views.py
apps/icons/: urls.py  views.py
apps/invoice/: urls.py  views.py
apps/kanban/: urls.py  views.py
apps/layouts/: urls.py  views.py
apps/logistics/: urls.py  views.py
apps/mail/: urls.py  views.py
apps/maps/: urls.py  views.py
apps/modal_examples/: urls.py  views.py
apps/my_calendar/: urls.py  views.py
apps/pages/: urls.py  views.py  views_misc.py
apps/tables/: urls.py  views.py
apps/transactions/: admin.py  forms.py  urls.py
apps/ui/: urls.py  views.py
apps/users/: views.py
apps/wizard_examples/: urls.py  views.py
auth/: helpers.py  models.py  urls.py  views.py
auth/forgot_password/: views.py
auth/login/: views.py
auth/register/: views.py
config/: settings.py  template.py  urls.py
dash/: data.csv  models.py  urls.py  utils.py  views.py
src/: package-lock.json
test2/: urls.py  views.py
web_project/: __init__.py  views.py
(+40 files in other folders)
