[tool.ruff]
# Allow lines to be as long as 120 characters.
line-length = 120

[tool.poetry]
name = "superdash"
version = "0.1.0"
description = ""
authors = ["termvsrobo <termvsrobo@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "3.8.1"
django = "5.0.6"
gunicorn = "22.0.0"
packaging = "24.1"
python-dotenv = "1.0.1"
sqlparse = "0.5.0"
typing-extensions = "4.12.2"
whitenoise = "6.7.0"
psycopg2-binary = "2.9.10"


[tool.poetry.group.dev.dependencies]
line-profiler = {extras = ["all"], version = "^4.2.0"}
django-pandas = "^0.6.7"
openpyxl = "^3.1.5"
flake8 = "^7.2.0"
isort = "^6.0.1"
flake8-pyproject = "^1.2.3"

[tool.flake8]
max-line-length = 120
exclude=["node_modules"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
